- Added a new cheat. (Phil)
- Fixed tech studying when money is needed. (emh)
- Added next/prev base buttons. (emh, Borg[MDQ] for suggestion)
- es_AR translation (our first!) (Borg[MDQ], very minor fixups by Phil)
- Moved more things into data files. (emh)
- Flavored names and numbers for the bases. (idea by heatsink, implementation
  by emh and Phil)
- Translation-related crash fix. (emh)

v0.21a (released 2005.09.19):
- Added '.sav' extension to new save files.  Old ones will still load, but
  they will save with a .sav extension, and the old save will not be used
  any more. (Phil)
- Fixed loading 0.20 saves with technologies currently being researched. (emh)

v0.21 (released 2005.09.19):
- Game will not crash when building a base or item in rare circumstances.
  (emh; Christan Brink (among others) for bug report)
- Fixed a few broken keyboard shortcuts, and redid the code to make this bug
  harder to create. (emh)
- Renamed almost all technologies. (Phil)
  [NOTE: The descriptions of the technologies have not yet been changed to
  match their new names.  This will be done by the next release.]
- Various typos. (Phil)
- The current speed will be highlighted. (emh; solitonwave Borg for suggestion)
- Changed endgame tech name. (emh; Daniel Radetsky for suggestion)
- Simplified savegame format. (emh; anonymous for suggestion)
- Fixed crash when loading a game, then starting a new game. (emh)

v0.20 (released 2005.09.14):
- Adjusted the README. (Phil)
- Added suspicion display. (emh)
- Slow time back to normal when a base is discovered. (emh)
- Redid base display. (emh)
- All clicks only accept the left mouse button. (emh)
- Scrollwheel works. (emh)
- Balancing. (emh)
- Various bugfixes. (Phil, emh)
- Future cash is displayed next to current cash. (emh)
- Code refactoring. (Phil)
- Bases and savegames can be named. (Phil, emh)
- Default base names are unique. (Phil)
- Suspicion reduces automatically over time. (Phil)
- Reduced cost for reactors and fields. (emh)