@@ -31,6 +31,8 @@ v0.22 (release 2005.09.??):
 - Flavored names and numbers for the bases. (idea by heatsink, implementation
   by emh and Phil)
 - Translation-related crash fix. (emh)
+- Global Research Screen; allows changing research for all bases. (emh)
+- Items give dialog upon completion. (emh; Jens Becker for suggestion)
 
 v0.21a (released 2005.09.19):
 - Added '.sav' extension to new save files.  Old ones will still load, but
